<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pengtaoh.mas.EditActivity">

    <include layout="@layout/toolbar_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.example.pengtaoh.mas.uicomp.SmoothProgressBar.SmoothProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/progress_wheel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/iv_agreement_scrip"
                android:layout_alignRight="@+id/iv_agreement_scrip"
                android:layout_below="@+id/iv_agreement_scrip"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:visibility="gone"
                app:spb_color="@color/colorPrimary"
                app:spb_mirror_mode="false"
                app:spb_progressiveStart_activated="true"
                app:spb_progressiveStart_speed="1.5"
                app:spb_progressiveStop_speed="3.4"
                app:spb_reversed="false"
                app:spb_sections_count="4"
                app:spb_speed="1.0"
                app:spb_stroke_separator_length="2dp"
                app:spb_stroke_width="2dp" />

            <Button
                android:id="@+id/scanner_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_scanner"
                android:textColor="@color/c4_4c" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="序列号：23EFTGBWE4564564"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/area_text"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:ems="5"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/product_attr"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:ems="5"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/product_type"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:ems="5"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/product_desc"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:gravity="top|left"
                    android:minLines="5"
                    android:text="ss"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
